--- a/style.css
+++ b/style.css
@@ -22,7 +22,11 @@ body {
 	padding: 20px 88px;
 	border-radius: 24px;
 	background-color: #FDF8F8;
-	opacity: 80%;
+	opacity: 70%;
+}
+
+.form__box:hover {
+	opacity: 100%;
 }
 
 form {
