--- a/style.css
+++ b/style.css
@@ -117,7 +117,10 @@ textarea {
 }
 
 .form__btns {
-	width: 530px;
+	/* width: 530px; */
+	width: 100%;
+	margin-left: 45px;
+	/* change above */
 	display: flex;
 	justify-content: space-around;
 }
